--- a/wp-content/themes/paea_theme/css/Sass/_grid.scss
+++ b/wp-content/themes/paea_theme/css/Sass/_grid.scss
@@ -1,7 +1,9 @@
 // GRID
 
 .grid {
-	margin: 25px 70px;
+	margin-left: 70px;
+	margin-right: 70px;
+	margin-bottom: 25px;
 }
 
 /* clear fix */
@@ -50,19 +52,25 @@
 
 .grid-item--sm-rectangle {
 	width: 480px;
+	height: 320px;
+	margin: 20px;
 	background: $grey;
 }
 
 .grid-item--long {
 	width: 510px;
+	height: 296px;
+	margin: 20px;
 }
 
 .right-margin {
 	margin-left: 0px;
+	//margin-right: 15px;
 }
 
 .left-margin {
 	margin-right: 0px;
+	//margin-left: 15px;
 }
 
 #about-block {
@@ -105,7 +113,6 @@
 		font-size: 20px;
 		font-weight: 300;
 		padding: 75px 15px;
-		
 	}
 }
 
@@ -116,10 +123,6 @@
 		font-weight: 300;
 		font-size: 18px;
 		line-height: 1.6;
-		svg {
-			width: 18px;
-			margin-left: 5px;
-		}
 	}
 }
 
