--- a/wp-content/themes/paea_theme/css/Sass/_grid.scss
+++ b/wp-content/themes/paea_theme/css/Sass/_grid.scss
@@ -14,12 +14,11 @@
 }
 
 .grid-item {
-	position: relative;
   float: left;
 	height: 225px;
 	width: 225px;
 	margin: 15px;
-	background: #ff0000;
+	background: $pearl;
 	padding: 10px;
 	h3 {
 		padding: 15px 10px 5px 25px;
@@ -42,7 +41,9 @@
 .grid-item--sm-square {
 	width: 50%;
 	height: 400px;
+	overflow: hidden;
 	margin: 0;
+	padding: 0;
 }
 
 .grid-item--portrait-rectangle {
@@ -57,24 +58,21 @@
 	background: $grey;
 }
 
-.grid-item--long {
-	width: 510px;
-	height: 296px;
-	margin: 20px;
-}
+
 
 .right-margin {
 	margin-left: 0px;
-	//margin-right: 15px;
 }
 
 .left-margin {
 	margin-right: 0px;
-	//margin-left: 15px;
 }
 
 #about-block {
-	background: $pink-orange;
+	background-size: cover;
+	background-position: center center;
+	background-color: $pink-orange;
+	background-blend-mode: overlay;
 	color: $white;
 	p {
 		margin-top: 30px;
@@ -107,12 +105,18 @@
 }
 
 .logistics-block {
-	background: $pearl;
+	background-size: cover;
+	background-position: center center;
+	background-color: $light_grey;
+	background-blend-mode: overlay;
 	text-align: center;
 	p {
 		font-size: 20px;
 		font-weight: 300;
 		padding: 75px 15px;
+	}
+	strong {
+		color: $pink_orange;
 	}
 }
 
