--- a/wp-content/themes/paea_theme/css/Sass/_pages.scss
+++ b/wp-content/themes/paea_theme/css/Sass/_pages.scss
@@ -3,6 +3,7 @@
 .top_banner {
 	margin-top: 3em;
 	margin-bottom: 2em;
+	padding-left: 0;
 	@extend h3;
 	color: $grey;
 	text-align: center;
@@ -13,13 +14,18 @@
 
 .hero_btn_group {
 	text-align: center;
+
 }
 
 .hero_btn  {
 	display: inline-block;
+	font-size: 20px;
+	padding: 18px 32px;
+	//margin-right: .7em;
 
 	&:nth-of-type(1) {
 		margin-right: 20px;
+		margin-left: 20px;
 	}
 }
 
