--- a/wp-content/themes/paea_theme/css/main.css
+++ b/wp-content/themes/paea_theme/css/main.css
@@ -509,12 +509,13 @@ footer {
   position: absolute;
   bottom: 0;
   left: 0;
-  padding: 15px 15px 15px 20px;
+  padding: 10px 30px;
   transition: all 0.5s ease-in-out; }
   .video-caption svg {
     display: inline-block;
     width: 30px;
     margin-top: 25px;
+    margin-bottom: 25px;
     float: left;
     margin-right: 20px;
     transition: all 0.5s ease-in-out; }
@@ -523,6 +524,7 @@ footer {
     font-size: 18px;
     font-weight: 600;
     color: #f1f2f2;
+    padding-top: 18px;
     text-transform: uppercase; }
   .video-caption:hover {
     background-color: rgba(0, 121, 100, 0.9); }
