--- a/wp-content/themes/paea_theme/css/main.css
+++ b/wp-content/themes/paea_theme/css/main.css
@@ -158,14 +158,14 @@ footer {
     font-size: 20px;
     border: 1px solid #A1A4A7;
     background-color: transparent;
-    color: #000000;
+    color: #f1f2f2;
     font-family: "Avenir Next Condensed", Arial, sans-serif;
     text-transform: uppercase;
     font-weight: 500;
     box-shadow: none;
     transition: all 0.5s ease-in-out; }
     footer .form-control:focus, footer .form-control:active, footer .form-control:hover {
-      border-color: #A1A4A7;
+      border-color: #f1f2f2;
       box-shadow: none; }
   footer .input-group-btn:last-child > .btn {
     margin-left: -47px; }
@@ -183,7 +183,7 @@ footer {
     margin-top: 5px;
     width: 36px; }
     footer #right-arrow svg:focus polygon, footer #right-arrow svg:active polygon, footer #right-arrow svg:hover polygon {
-      fill: #A1A4A7; }
+      fill: #f1f2f2; }
   footer ul {
     margin-top: 25px;
     margin-bottom: 25px;
