Made Venue and Accomodations area full-width

--- a/wp-content/themes/paea_theme/css/Sass/_grid.scss
+++ b/wp-content/themes/paea_theme/css/Sass/_grid.scss
@@ -44,6 +44,12 @@
 	overflow: hidden;
 	margin: 0;
 	padding: 0;
+	h3 {
+		padding: 35px 10px 5px 40px;
+	}
+	p {
+		padding: 10px 40px;
+	}
 }
 
 .grid-item--portrait-rectangle {
