--- a/wp-content/themes/paea_theme/css/Sass/_pages.scss
+++ b/wp-content/themes/paea_theme/css/Sass/_pages.scss
@@ -164,9 +164,10 @@
 // FOR ATTENDEES PAGE 
 
 #attendees-page {
+
 	.bottom_divider {
-		margin-top: 60px;
-		margin-bottom: 20px;
+		margin-top: 30px;
+		margin-bottom: 30px;
 	}
 	.accented_text {
 	color: $accent_color;
@@ -194,6 +195,12 @@
 
 			font-size: 16px;
 		}
+	}
+}
+
+#objectives {
+	h3 {
+		margin-bottom: 25px;
 	}
 }
 
