--- a/wp-content/themes/paea_theme/css/Sass/_components.scss
+++ b/wp-content/themes/paea_theme/css/Sass/_components.scss
@@ -301,12 +301,15 @@ a[data-scribe="element:hashtag"] {
 }
 
 .right-arrow {
+	margin-right: 10px;
 	svg {
 		width: 20px;
 	}
 }
 
 .down-arrow {
+	margin-top: 8px;
+	margin-right: 5px;
 	svg {
 		width: 14px;
 	}
@@ -327,7 +330,7 @@ a[data-scribe="element:hashtag"] {
 	width: 100%;
 	border: 1px solid transparent;
 	color: $black;
-	margin: 20px 0;
+	margin: 10px 0;
 	padding: 10px 16px;
 	border-radius: 5px;
 	text-align: left;
