--- a/wp-content/themes/paea_theme/css/Sass/_typography.scss
+++ b/wp-content/themes/paea_theme/css/Sass/_typography.scss
@@ -74,10 +74,22 @@ a {
 	}
 }
 
-.generic-page>li {
+.generic-page {
+	h3 {
+		margin-top: 40px;
+		margin-bottom: 20px;
+	}
+	li {
 	color: $black;
 	font-size: 20px;
 	font-weight: 300;
 	line-height: 1.6;
-
+	}	
+	p {
+		font-size: 21px;
+		font-weight: 300;
+		line-height: 1.8;
+		margin-bottom: 15px;
+	}
 }
+
