--- a/wp-content/themes/paea_theme/css/Sass/_pages.scss
+++ b/wp-content/themes/paea_theme/css/Sass/_pages.scss
@@ -155,7 +155,7 @@
 .after-the-summit {
 	background: no-repeat center center; 
 	//background: url(../img/outcomes_background@2x.jpg);
-	background-size: contain;
+	background-size: cover;
 	height: 500px;
 	margin-top: 40px;
 	margin-bottom: 40px;
