--- a/wp-content/themes/paea_theme/css/main.css
+++ b/wp-content/themes/paea_theme/css/main.css
@@ -759,7 +759,7 @@ a[data-scribe="element:hashtag"] {
 
 .after-the-summit {
   background: no-repeat center center;
-  background-size: contain;
+  background-size: cover;
   height: 500px;
   margin-top: 40px;
   margin-bottom: 40px; }
