--- a/wp-content/themes/paea_theme/css/Sass/_components.scss
+++ b/wp-content/themes/paea_theme/css/Sass/_components.scss
@@ -1,5 +1,45 @@
 //JUMBOTRON
 
+.homepage section.hero {
+	height: 680px;
+}
+
+
+.hero .container {
+  position: relative;
+  z-index: 2;
+  p {
+  	text-align: center;
+		font-size: 36px;
+		margin-top: 0px;
+		font-weight: 400;
+		line-height: 1.4em;
+		margin-bottom: 1.7em;
+  }
+}
+
+.homepage section.hero .hero-video-container {
+	position: absolute;
+  top: 60px;
+  left: 0;
+  width: 100%;
+  height: 680px;
+  overflow: hidden;
+  z-index: -1;
+}
+
+.hero-video-container video {
+    min-height: 100%;
+    min-width: 100%;
+    width: auto;
+    height: auto;
+}
+
+video {
+    display: inline-block;
+    vertical-align: baseline;
+}
+
 .jumbotron {
 	background-size: cover;
 	height: 500px;
@@ -15,29 +55,6 @@
 	}
 }
 
-/*
-.top_banner {
-	margin-top: 3em;
-	margin-bottom: 2em;
-	@extend h3;
-	color: $grey;
-	text-align: center;
-	li {
-	display: inline-block;
-	}
-}
-
-.hero_btn_group {
-	text-align: center;
-}
-
-.hero_btn  {
-	display: inline-block;
-
-	&:nth-of-type(1) {
-		margin-right: 20px;
-	}
-}*/
 
 //BUTTONS
 
@@ -61,22 +78,21 @@
 	margin-bottom: 20px;
 	margin-top: 20px;
 	svg {
-		width: 35px;
+		position: relative;
+		left: 0;
+		width: 30px;
 		margin-left: 25px;
+		margin-top: 5px;
 		fill: $white;
-		line {
-			stroke: $white;
-		}
 	}
-	&:hover, &:focus, &:active:focus  {
-			polygon {
-			fill: $pink_orange;
-			}
-			line {
-			stroke: $pink_orange;
-			}
-		}
 }
+
+.btn svg {
+	position: relative;
+	left: 0;
+	transition: $transition;
+}
+
 
 // VIDEO SECTION ON HOME PAGE
 
@@ -246,7 +262,8 @@
 	}
 
 	svg {
-		width: 20px;
+		width: 17px;
+		margin-left: 8px;
 	}
 
 	img, span[data-scribe="element:verified_badge"], span[data-scribe="element:name"], span[title="Verified Account"] {
