--- a/wp-content/themes/paea_theme/css/main.css
+++ b/wp-content/themes/paea_theme/css/main.css
@@ -329,10 +329,13 @@ footer {
     font-size: 18px;
     line-height: 1.6; }
 
-.hero {
-  height: 680px;
-  padding-top: 240px; }
-  .hero p {
+.homepage section.hero {
+  height: 680px; }
+
+.hero .container {
+  position: relative;
+  z-index: 2; }
+  .hero .container p {
     text-align: center;
     font-size: 36px;
     margin-top: 0px;
@@ -340,18 +343,14 @@ footer {
     line-height: 1.4em;
     margin-bottom: 1.7em; }
 
-.jumbotron .container {
-  position: relative;
-  z-index: 2; }
-
-.hero-video-container {
+.homepage section.hero .hero-video-container {
   position: absolute;
-  top: 0;
+  top: 60px;
   left: 0;
   width: 100%;
   height: 680px;
   overflow: hidden;
-  z-index: 1; }
+  z-index: -1; }
 
 .hero-video-container video {
   min-height: 100%;
@@ -362,6 +361,19 @@ footer {
 video {
   display: inline-block;
   vertical-align: baseline; }
+
+.jumbotron {
+  background-size: cover;
+  height: 500px;
+  position: relative;
+  margin-bottom: 80px; }
+  .jumbotron p {
+    text-align: center;
+    font-size: 36px;
+    margin-top: 0px;
+    font-weight: 400;
+    line-height: 1.4em;
+    margin-bottom: 1.7em; }
 
 .btn-primary {
   font-family: "Avenir Next Condensed", Arial, sans-serif;
@@ -684,7 +696,7 @@ a[data-scribe="element:hashtag"] {
   background-image: none !important; }
 
 .top_banner {
-  margin-top: 3em;
+  padding-top: 100px;
   margin-bottom: 2em;
   padding-left: 0;
   color: #63686c;
