some transition stuff

--- a/wp-content/themes/paea_theme/css/Sass/_components.scss
+++ b/wp-content/themes/paea_theme/css/Sass/_components.scss
@@ -362,6 +362,12 @@ a[data-scribe="element:hashtag"] {
 			color: #fff;
 			background-color: $pink_orange;
 		}
+		.right-arrow {
+			margin-right: 4px;
+		}
+		.down-arrow {
+			margin-top: 13px;
+		}
 	}
 	h4 {
 		display: inline-block;
