--- a/wp-content/themes/paea_theme/css/main.css
+++ b/wp-content/themes/paea_theme/css/main.css
@@ -83,21 +83,7 @@ a {
   padding-top: 32px;
   padding-bottom: 10px;
   padding-left: 25px;
-  position: relative;
-  /*
-  &:hover {
-  	//position: relative;
-  	color: $accent_color !important;
-  		&:after {
-  			content: "";
-  			border-bottom: 1px dashed $grey;
-  			position: absolute;
-  			margin-right: 15px;
-  			left: 25px;
-  			right: 0;
-  			bottom: 0px;
-  		}
-  	} */ }
+  position: relative; }
   .navbar-nav > li > a:hover {
     position: relative;
     color: #007964 !important; }
@@ -347,7 +333,8 @@ footer {
     padding: 25px 25px 0px 25px;
     font-weight: 300;
     font-size: 18px;
-    line-height: 1.6; }
+    line-height: 1.6;
+    overflow: hidden; }
 
 .homepage section.hero {
   height: 680px; }
@@ -540,45 +527,7 @@ video {
   transition: opacity 800ms, height 0s;
   -webkit-transition-delay: 0s, 0s;
   -moz-transition-delay: 0s, 0s;
-  transition-delay: 0s, 0s;
-  /*&:before {
-    content: '';
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 80px;
-    height: 80px;
-    margin: -40px 0 0 -40px;
-    border: 5px solid $color-button;
-    border-radius: 100%;
-    -webkit-transition: border-color 300ms;
-    -moz-transition: border-color 300ms;
-    transition: border-color 300ms;
-  }
-  &:after {
-    content: '';
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 0;
-    height: 0;
-    margin: -20px 0 0 -10px;
-    border-left: 40px solid $color-button;
-    border-top: 25px solid transparent;
-    border-bottom: 25px solid transparent;
-    -webkit-transition: border-color 300ms;
-    -moz-transition: border-color 300ms;
-    transition: border-color 300ms;
-  }
-  &:hover,
-  &:focus {
-    &:before {
-      border-color: $color-button-hover;
-    }
-    &:after {
-      border-left-color: $color-button-hover;
-    }
-  }*/ }
+  transition-delay: 0s, 0s; }
   .videoWrapperActive .videoPoster {
     opacity: 0;
     height: 0;
