--- a/wp-content/themes/paea_theme/css/Sass/_footer.scss
+++ b/wp-content/themes/paea_theme/css/Sass/_footer.scss
@@ -35,6 +35,9 @@ footer {
 	.input-group {
 		width: 50%;
 		margin: 0 auto;
+		@media screen and (max-width: 480px) {
+			width: 90%;
+		}
 	}
 
 	.input-group .form-control {
