--- a/wp-content/themes/paea_theme/css/Sass/_variables.scss
+++ b/wp-content/themes/paea_theme/css/Sass/_variables.scss
@@ -14,6 +14,10 @@ $medium_grey: #A1A4A7;
 $light_grey: #e8e8e8;
 $transition: all 0.5s ease-in-out;
 
+$phone-width: 640px;
+$tablet-width: 768px;
+$desktop-width: 1024px;
+
 // MIXINS
 
 @mixin big-button($color_1, $color_2) {
@@ -60,4 +64,29 @@ $transition: all 0.5s ease-in-out;
 		background-color: $color_1;
 		border-color: $color_1;
 	}
+}
+
+
+@mixin tablet {
+	@media (min-width: #{$tablet-width}) and (max-width: #{$desktop-width - 1px}) {
+		@content;
+	}
+}
+
+@mixin phone {
+	@media (max-width: #{$phone-width}) {
+		@content;
+	}
+}
+
+@mixin retina {
+  @media
+    only screen and (-webkit-min-device-pixel-ratio: 2),
+    only screen and (min--moz-device-pixel-ratio: 2),
+    only screen and (-o-min-device-pixel-ratio: 2/1),
+    only screen and (min-device-pixel-ratio: 2),
+    only screen and (min-resolution: 192dpi),
+    only screen and (min-resolution: 2dppx) {
+    @content;
+  }
 }
