--- a/wp-content/themes/paea_theme/css/main.css
+++ b/wp-content/themes/paea_theme/css/main.css
@@ -146,6 +146,9 @@ footer {
   footer .input-group {
     width: 50%;
     margin: 0 auto; }
+    @media screen and (max-width: 480px) {
+      footer .input-group {
+        width: 90%; } }
   footer .input-group .form-control {
     border: 1px solid #A1A4A7; }
   footer .btn-default {
@@ -349,6 +352,14 @@ footer {
     font-weight: 400;
     line-height: 1.4em;
     margin-bottom: 1.7em; }
+    @media (min-width: 768px) and (max-width: 1023px) {
+      .hero .container p {
+        font-size: 28px;
+        margin-bottom: 1em; } }
+    @media (max-width: 640px) {
+      .hero .container p {
+        font-size: 28px;
+        margin-bottom: 1em; } }
 
 .homepage section.hero .hero-video-container {
   position: absolute;
@@ -358,6 +369,11 @@ footer {
   height: 680px;
   overflow: hidden;
   z-index: -1; }
+  @media (max-width: 640px) {
+    .homepage section.hero .hero-video-container {
+      position: relative;
+      top: 0;
+      height: initial; } }
 
 .hero-video-container video {
   min-height: 100%;
