made small changes requested by client

--- a/wp-content/themes/paea_theme/css/Sass/_grid.scss
+++ b/wp-content/themes/paea_theme/css/Sass/_grid.scss
@@ -81,7 +81,7 @@
 	background-blend-mode: overlay;
 	color: $white;
 	p {
-		font-weight: 300;
+		font-weight: 400; // increased from 300
 		font-size: 18px;
 		line-height: 1.6;
 	}
