--- a/wp-content/themes/paea_theme/css/Sass/_pages.scss
+++ b/wp-content/themes/paea_theme/css/Sass/_pages.scss
@@ -38,6 +38,9 @@
 	float: right;
 	padding: 20px;
 	margin: 20px;
+	p {
+		font-size: 16px; // originally 20px
+	}
 }
 
 
@@ -156,6 +159,9 @@
 	height: 500px;
 	margin-top: 40px;
 	margin-bottom: 40px;
+	p {
+		font-weight: 400; //originally 300
+	}
 }
 
 // FOR ATTENDEES PAGE 
